# Petrophysics_Code

./: .gitignore  CONVENTIONS.md  LIBRARY_MERGE_PLAN.md  LICENSE  README.md  copilot-instructions.md  pyproject.toml
docs/: petrolib-api.md  petrolib.md
petrolib/: __init__.py  _compat.py  acoustic_geomech.py  borehole_image.py  capillary_pressure.py  constants.py  depth_correction.py  depth_matching.py  em_dielectric.py  flow_transport.py  integrity_drilling.py  ml_stats.py  nmr.py  nuclear.py  porosity_lithology.py  relperm_wettability.py  saturation_resistivity.py  testing.py  units.py  wellbore_geometry.py
src2013_04/: README.md  article01_electrofacies_dp.py  article02_image_rock_classification.py  article04_log_prediction_ml.py  article05_outlier_detection.py  test_all.py
src2014_02/: README.md  article1_dualwater_dielectric_nmr.py  article2_pc_resistivity_index_carbonate.py  article3_nanofluid_imbibition.py  article4_canister_gas_isotopes.py  article5_thermal_conductivity_velocity.py  test_all.py
src2014_04/: README.md  article1_deepwater_gom_overview.py  article2_turbidite_sediments.py  article3_reservoir_fluid_dynamics.py  article4_asphaltene_fault_block_migration.py  article5_deepwater_formation_evaluation.py  article6_kerogen_resistivity_mudrocks.py  test_all.py
src2014_06/: README.md  article1_bazhenov_rock_physics.py  article2_borehole_carbon_toc.py  article3_three_magnet_mr_coreplug.py  article4_nmr_carbonate_permeability.py  article5_shaly_sand_porosity_deepwater.py  test_all.py
src2014_08/: README.md  article1_threephase_relperm_carbonate.py  (+6 more)
(+823 files in other folders)
